[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.9",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "streamlit>=1.45.1",
    "unstructured>=0.17.2",
]
